Update and rename Reflecting_on_Assignment2 to Reflecting_on_Assignment2.html

--- a/essays/Reflecting_on_Assignment2.html
+++ b/essays/Reflecting_on_Assignment2.html
@@ -13,7 +13,7 @@ labels:
 
 *Provide a brief introduction to the assignment along with a link to this page for further details*
 
-Assignment 2 builds on the store website that we made in Assignment 1. This portion of the project focuses on creating a login page in which the user is redirected to after making a purchase. They have the option to login if they have an account or register an account which we will have to save into our server. After logging in or registering the invoice should display the user's purchase. 
+Assignment 2 builds on the store website that we made in Assignment 1. This portion of the project focuses on creating a login page in which the user is redirected to after making a purchase. They have the option to login if they have an account or register an account which we will have to save into our server. After logging in or registering the invoice should display the user's purchase. Here is the assignment details: https://dport96.github.io/ITM352/morea/150.Assignment2/experience-Assignment2.html
 
 *What did you learn from this assignment?*
 
